resources/webidl2/test/invalid/baseline/union-dangling-or.txt
Syntax error at line 1:
 (One or Two or) UnionOr;
               ^ No type after open parenthesis or 'or' in union type
